--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-cookies": "~1.3.14",
     "materialize": "~0.95.3",
     "leaflet": "~0.7.3",
-    "mapbox.js": "~2.1.5"
+    "mapbox.js": "~2.1.5",
+    "angular-google-maps": "~2.0.16"
   }
 }
