--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "leaflet": "~0.7.3",
     "mapbox.js": "~2.1.5",
     "angular-google-maps": "~2.0.16",
-    "google-map": "GoogleWebComponents/google-map#~0.4.2"
+    "google-map": "GoogleWebComponents/google-map#~0.4.2",
+    "moment": "~2.9.0"
   }
 }
