--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "mapbox.js": "~2.1.5",
     "angular-google-maps": "~2.0.16",
     "google-map": "GoogleWebComponents/google-map#~0.4.2",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "ngmap": "~1.4.2"
   }
 }
