--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "google-map": "GoogleWebComponents/google-map#~0.4.2",
     "moment": "~2.9.0",
     "ngmap": "~1.4.2",
-    "Chart.js": "~1.0.2"
+    "Chart.js": "~1.0.2",
+    "angular-chartjs-directive": "~1.0.0"
   }
 }
